# ChangeLog for dev-util/monodevelop
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/monodevelop/ChangeLog,v 1.52 2007/12/30 09:36:33 compnerd Exp $

*monodevelop-0.18 (30 Dec 2007)

  30 Dec 2007; Saleem Abdulrasool <compnerd@gentoo.org>
  +monodevelop-0.18.ebuild:
  Version bump from upstream, still has a few parallel build issues

*monodevelop-0.15 (19 Aug 2007)

  19 Aug 2007; Jurek Bartuszek <jurek@gentoo.org>
  +files/monodevelop-0.15-aspnet-template-fix.patch,
  +files/monodevelop-0.15-configure.patch, +monodevelop-0.15.ebuild:
  Version bump (bug #187987)

  01 Aug 2007; Jurek Bartuszek <jurek@gentoo.org> monodevelop-0.14.ebuild:
  Removing ~ppc flag until bug #185808 is fixed

  27 Jul 2007; Jurek Bartuszek <jurek@gentoo.org>
  files/monodevelop-0.14-configure.patch:
  Replaced garbage in monodevelop-0.14-configure.patch with real content (fixing
  bug #186777)

  26 Jul 2007; Jurek Bartuszek <jurek@gentoo.org>
  files/monodevelop-0.14-configure.patch, monodevelop-0.14.ebuild:
  Fixes in configure.in (bug #183956)

  18 Jul 2007; Jurek Bartuszek <jurek@gentoo.org> monodevelop-0.14.ebuild:
  Added ~amd64 and ~ppc keywords

  02 Jul 2007; Jurek Bartuszek <jurek@gentoo.org>
  files/monodevelop-0.14-configure.patch, monodevelop-0.14.ebuild:
  - aspnetedit use flag now requires either firefox or seamonkey use flag to be
    enabled (bug #183968)
  - fixed typo in configure.in which prevented the --disable-update-desktopdb
    option from being honored by configure script (bug #183956)

*monodevelop-0.14 (01 Jul 2007)

  01 Jul 2007; Jurek Bartuszek <jurek@gentoo.org>
  +files/monodevelop-0.14-aspnet-template-fix.patch,
  +files/monodevelop-0.14-configure.patch, +monodevelop-0.14.ebuild:
  Version bump (fixing bugs #132457, #168208)

  11 Dec 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  monodevelop-0.12.ebuild:
  Fix metacity atom
